MAJOR BUG in the Edit Profile - doesn't reflect updates. Not fixed, patched up

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DevGram</title>
   </head>
   <body>
-    <html data-theme="forest"></html>
+    <html data-theme="dracula"></html>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
